@@ -1,5 +1,5 @@
-Multi-entry widget package Mentry, version 3.4
-Copyright (c) 1999-2010  Csaba Nemethi (E-mail: csaba.nemethi@t-online.de)
+Multi-entry widget package Mentry, version 3.5
+Copyright (c) 1999-2011  Csaba Nemethi (E-mail: csaba.nemethi@t-online.de)
 
 This library is free software; you can use, modify, and redistribute it
 for any purpose, provided that existing copyright notices are retained
