@@ -54,7 +54,7 @@ How to get it?
 --------------
 
 Mentry is available for free download from the same URL as Wcb.  The
-distribution file is "mentry3.4.tar.gz" for UNIX and "mentry3_4.zip"
+distribution file is "mentry3.5.tar.gz" for UNIX and "mentry3_5.zip"
 for Windows.  These files contain the same information, except for the
 additional carriage return character preceding the linefeed at the end
 of each line in the text files for Windows.
@@ -74,15 +74,15 @@ locations of these library directories are given by the "tcl_library"
 and "tk_library" variables, respectively.
 
 To install Mentry on UNIX, "cd" to the desired directory and unpack the
-distribution file "mentry3.4.tar.gz":
+distribution file "mentry3.5.tar.gz":
 
-    gunzip -c mentry3.4.tar.gz | tar -xf -
+    gunzip -c mentry3.5.tar.gz | tar -xf -
 
-This command will create a directory named "mentry3.4", with the
+This command will create a directory named "mentry3.5", with the
 subdirectories "demos", "doc", and "scripts".
 
 On Windows, use WinZip or some other program capable of unpacking the
-distribution file "mentry3_4.zip" into the directory "mentry3.4", with
+distribution file "mentry3_5.zip" into the directory "mentry3.5", with
 the subdirectories "demos", "doc", and "scripts".
 
 The file "mentryThemes.tcl" in the "scripts" directory is only needed
