@@ -150,8 +150,8 @@ foreach w [.me entries] {
   <h3><a name="ov_get"></a>How to get it?</h3>
 
   <p>Mentry is available for free download from the same URL as Wcb.&nbsp; The
-  distribution file is <code>mentry3.4.tar.gz</code> for UNIX and
-  <code>mentry3_4.zip</code> for Windows.&nbsp; These files contain the same
+  distribution file is <code>mentry3.5.tar.gz</code> for UNIX and
+  <code>mentry3_5.zip</code> for Windows.&nbsp; These files contain the same
   information, except for the additional carriage return character preceding
   the linefeed at the end of each line in the text files for Windows.</p>
 
@@ -175,21 +175,21 @@ foreach w [.me entries] {
   respectively.</p>
 
   <p>To install Mentry <i>on UNIX</i>, <code>cd</code> to the desired directory
-  and unpack the distribution file <code>mentry3.4.tar.gz</code>:</p>
+  and unpack the distribution file <code>mentry3.5.tar.gz</code>:</p>
 
   <blockquote>
     <pre>
-gunzip -c mentry3.4.tar.gz | tar -xf -
+gunzip -c mentry3.5.tar.gz | tar -xf -
 </pre>
   </blockquote>
 
-  <p>This command will create a directory named <code>mentry3.4</code>, with
+  <p>This command will create a directory named <code>mentry3.5</code>, with
   the subdirectories <code>demos</code>, <code>doc</code>, and
   <code>scripts</code>.</p>
 
   <p><i>On Windows</i>, use WinZip or some other program capable of unpacking
-  the distribution file <code>mentry3_4.zip</code> into the directory
-  <code>mentry3.4</code>, with the subdirectories <code>demos</code>,
+  the distribution file <code>mentry3_5.zip</code> into the directory
+  <code>mentry3.5</code>, with the subdirectories <code>demos</code>,
   <code>doc</code>, and <code>scripts</code>.</p>
 
   <p>The file <code>mentryThemes.tcl</code> in the <code>scripts</code>
